--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -1,9 +1,13 @@
 name: CI Build App
 
 on:
-  # push:
-  #   branches-ignore: [master]
+  push:
+    branches: [master]
   pull_request:
+
+env:
+  IMAGE_REG: ghcr.io
+  IMAGE_REPO: benc-uk/nodejs-demoapp
 
 jobs:
   test:
@@ -36,5 +40,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Docker build
-        run: docker build . -t temp-ci-image
+      - name: "Docker build image"
+        run: docker build . -t $IMAGE_REG/$IMAGE_REPO:${{ github.run_id }} -t $IMAGE_REG/$IMAGE_REPO:latest
+
+      - name: "Login to GitHub container registry"
+        if: github.ref == 'ref/head/master'
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.IMAGE_REG }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: "Docker push image to ${{ env.IMAGE_REG }}"
+        if: github.ref == 'ref/head/master'
+        run: docker push $IMAGE_REG/$IMAGE_REPO
